--- a/testhal/STM32F37x/PWM-ICU/Makefile
+++ b/testhal/STM32F37x/PWM-ICU/Makefile
@@ -129,7 +129,7 @@ INCDIR = $(PORTINC) $(KERNINC) $(TESTINC) \
 MCU  = cortex-m4
 
 #TRGT = arm-elf-
-TRGT = /Users/alvin/genist/arm-toolchain/bin/arm-none-eabi-
+TRGT = arm-none-eabi-
 CC   = $(TRGT)gcc
 CPPC = $(TRGT)g++
 # Enable loading with g++ only if you need C++ runtime support.
