split rtd / ms5803 into separate files - compiles - not tested yet.

--- a/boards/genistCustom1/Makefile
+++ b/boards/genistCustom1/Makefile
@@ -83,6 +83,8 @@ CSRC = $(PORTSRC) \
        $(HALSRC) \
        $(PLATFORMSRC) \
        $(BOARDSRC) \
+       ms5803.c \
+       rtd.c \
        main.c
 
 # C++ sources that can be compiled in ARM or THUMB mode depending on the global
